--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -25,6 +25,10 @@
   flex-direction: column;
   align-items: center;
   padding-top: 60px;
+  background-image: url(../public/background.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 120vh;
 }
 .main .icon {
   width: 34px;
@@ -33,7 +37,7 @@
   font-size: 32px;
   line-height: 40px;
   font-weight: bold;
-  color: #202123;
+  color: #FFFFFF;
   margin: 16px 0 40px;
 }
 .main form {
@@ -48,6 +52,7 @@
   margin-bottom: 24px;
   outline-color: #A3262A;
   background-color: #FFD84B;
+  color: #000000;
 }
 .main ::placeholder {
   color: #8e8ea0;
@@ -65,7 +70,8 @@
 
 .main .collapses {
   margin-top: 30px;
-  border-spacing: 15px 30px;
+  border-spacing: 30px 50px;
   width: 50%;
-  background-color: #F2888B;
+  /* background-color: #F2888B; */
+  border-radius: 4px;
 }
