--- a/pages/plan.module.css
+++ b/pages/plan.module.css
@@ -1,33 +1,33 @@
-.collapsible {
-    background-color: #eee;
+.collapsible, .collapsed {
+    background-color: #FFD84B;
     color: #444;
     cursor: pointer;
-    padding: 18px;
+    padding: 20px;
     width: 100%;
     border: none;
     text-align: left;
     outline: none;
     font-size: 15px;
     table-layout: fixed;
-  }
+    font-weight: bold;
+}
+.collapsible {
+  border-radius: 4px;
+}
   
 .active, .collapsible:hover {
   background-color: #ccc;
 }
 
 .content {
-  padding: 0 18px;
+  padding: 0 20px;
   background-color: white;
   height: 0px;
   overflow: hidden;
   transition: height 0.6s ease-out;
+  border-radius: 0px 0px 4px 4px;
 }
 
-.content-show {
-  height: 200px;
-}
-
-.collapsible {
-  background-color: #FFD84B;
-  font-weight: bold;
+.collapsed {
+  border-radius: 4px 4px 0px 0px;
 }
