--- a/pages/landing.module.css
+++ b/pages/landing.module.css
@@ -5,7 +5,7 @@
     padding: 0;
     font-family: 'Montserrat', sans-serif;
     color: #ffffff;
-    background-image: url(../public/background.svg);
+    background-image: url(/background.svg);
     height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
